[package]
name = "left_and_right"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbfreader = "0.16.0"
smartstring = "1.0.1"
rtree_rs = "0.1.4"
ntex = { version = "0.6", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
ahash = "0.8.3"
radix-heap = "0.4.2"
#rstar = "0.10.0"
clap = { version = "4.2.1", features = ["derive"] }
priority-queue = "1.3.1"
rayon = "1.7"
crossbeam = "0.8.2"
log = "0.4.14"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3